fix header logo size on mobile and tablet

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -157,6 +157,10 @@ $footer-height = 44px
     width: $margin-small
     margin-right: $margin-micro
     
+#header-logo 
+  svg 
+    width: 180px
+    
 // ******************************************************
 
 // JOURNAL 
