--- a/css/site.styl
+++ b/css/site.styl
@@ -514,7 +514,7 @@ a.button-shop,
 #header-logo 
   text-align: center
   svg 
-    width: 200px
+    width: 140px
   .logo-path
     fill: $color-black-soft
 
